[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dlou-student-crawler"
version = "0.1.0"
description = "A polite, Dalian Ocean University news and notice crawler"
requires-python = ">=3.10"

[project.scripts]
dlou-crawler = "dlou_crawler.cli:main"

[tool.setuptools.packages.find]
include = ["dlou_crawler*"]
